traces/bug_813.txt
src/bamglib/Mesh2.cpp:1928: error: DEAD_STORE
  The value written to &nbtold (type long) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:1928:5: Write of unused value
1926.     Int4 NbTSwap =0;
1927.   //    insert old point
1928.       nbtold = nbt;
            ^
1929.       
1930.     if (KeepBackVertex && (&Bh != this) && (nbv+Bh.nbv< nbvx)) 
